# qa-agent

.claude/: mcp-jira.json  settings.json
.claude/agents/: qa-backend.md  qa-frontend.md
.github/workflows/: jira-agent.yml  qa-agent.yml
backend/: .gitignore  conftest.py  main.py  pyproject.toml  test_tasks.py
docs/: architecture.md  setup.md
frontend/: .gitignore  package.json  playwright.config.ts
frontend/e2e/: tasks.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
tasks/: lessons.md  todo.md
